fixed image alignment

--- a/src/components/product-card-desktop/product-card-desktop.styles.scss
+++ b/src/components/product-card-desktop/product-card-desktop.styles.scss
@@ -16,21 +16,20 @@ $activeColor: #1ccbde;
     z-index: 1;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     background-color: #fff;
+    justify-content: space-between;
+    gap: 3rem;
 
     //calc(minFont + (maxFont - minFont) * ((100vw - minVW) / (maxVW - minVW)))
     //screenwidth 768 to 1920px
     //             min     max - min *  100vw  - minVW  / maxVW - minVW
     // font-size: calc(16px + (32 - 16) * ((100vw - 768px) / (1920 - 768)));
-
     //clamp(minFont, middleGround, maxFont);
     // font-size: clamp(1.6rem, 3.2rem, 1.8rem);
     // font-size: clamp(1.6rem, 3.2rem, 5vw);
     // font-size: clamp(1.6rem, 1vw, 2.1rem);
     // font-size: calc(1vw + 0.3rem);
-
     // font-size: calc(16px + (26 - 16) * ((100vw - 768px) / (1600 - 768)));
     // overflow-x: hidden;
-
     .product-card-button-container {
       position: absolute;
       display: flex;
@@ -39,6 +38,7 @@ $activeColor: #1ccbde;
       right: 10%;
       min-width: 100px;
       height: 50px;
+      z-index: 100;
 
       .prev-btn,
       .next-btn {
@@ -47,19 +47,14 @@ $activeColor: #1ccbde;
         display: flex;
         transform: all;
         color: #222;
-        // border: 1px solid red;
 
         .prev-btn-icon,
         .next-btn-icon {
           padding: 1rem;
-          // width: 36px;
-          // height: 36px;
           width: 44px;
           height: 44px;
 
           &:hover {
-            // width: 44px;
-            // height: 44px;
             width: 52px;
             height: 52px;
             cursor: pointer;
@@ -195,7 +190,6 @@ $activeColor: #1ccbde;
           flex-direction: column;
           justify-content: space-between;
           min-width: 30rem;
-          // border: 1px solid blue;
 
           .product-card-cost {
             display: flex;
@@ -226,26 +220,23 @@ $activeColor: #1ccbde;
     }
 
     .product-card-right-container {
-      position: relative;
-      width: 50%;
-      height: 59rem;
+      width: 38%;
+      height: 30rem;
+      margin-top: 5%;
 
       // IMAGE
       .product-card-img-container {
-        position: absolute;
-        top: 12%;
-        right: 12%;
-        max-width: 500px;
-        // max-width: 300px;
+        max-width: 400px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
+        //TODO - here is where we are getting image issue
         .product-img {
-          // max-width: 20vw;
-          max-width: 40rem;
-          // max-width: 25vw;
+          max-width: 100%;
           height: auto;
           object-fit: cover;
           object-position: center;
-          // border: 2px solid red;
         }
       }
     }
