--- a/src/components/product-card-mobile/product-card-mobile.styles.scss
+++ b/src/components/product-card-mobile/product-card-mobile.styles.scss
@@ -213,6 +213,7 @@ $activeColor: #1ccbde;
         right: 7.5vw;
         min-width: 100px;
         height: 50px;
+        z-index: 100;
 
         .prev-btn,
         .next-btn {
